--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head></head>
   <body>
     <h1>
-      Fred is the name ......
+      Fredjil is the name ...... Hey vim works
+      
     </h1>
   </body>
 </html>
